syntax = "proto3";

package protobuf;

message GetRequest {
  string key = 1;
}

message SetRequest {
  string key = 1;
  bytes value = 2;
}

message DeleteRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
}

message SetResponse {
  Error error = 1;
}

message DeleteResponse {
  Error error = 1;
}

message Error {
  string message = 1;
  int32 code = 2;
}

service Hermes {
  rpc Get(GetRequest) returns (GetResponse) {
  };
  rpc Set(SetRequest) returns (SetResponse) {
  };
  rpc Delete(DeleteRequest) returns (DeleteResponse) {
  };
}
